JWT auth added, and some microchanges

--- a/oauth-service/pom.xml
+++ b/oauth-service/pom.xml
@@ -28,6 +28,12 @@
 			<groupId>ru.inedtest</groupId>
 			<artifactId>base</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>ru.inedtest</groupId>
