--- a/books-api/pom.xml
+++ b/books-api/pom.xml
@@ -24,6 +24,13 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springframework.security.oauth.boot</groupId>
+			<artifactId>spring-security-oauth2-autoconfigure</artifactId>
+			<version>2.3.4.RELEASE</version>
+		</dependency>
+
+
+		<dependency>
 			<groupId>ru.inedtest</groupId>
 			<artifactId>database</artifactId>
 		</dependency>
