--- a/books-api/src/main/resources/application.properties
+++ b/books-api/src/main/resources/application.properties
@@ -13,4 +13,7 @@ hibernate.hikari.maximumPoolSize=10
 hibernate.hikari.idleTimeout=30000
 hibernate.hikari.poolName = springHikariCP
 
+jwt.token.secret=jwtappdemo
+jwt.token.expired=3600000
+
 server.port=8084
