--- a/ined-core/base/pom.xml
+++ b/ined-core/base/pom.xml
@@ -35,6 +35,10 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
